--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-promise-router": "^4.1.1",
-    "mysql2": "^3.11.4"
+    "mysql2": "^3.11.4",
+    "nodemon": "^3.1.7"
   }
 }
